Edited wiki page DSPEmulator through web user interface.

--- a/wiki/DSPEmulator.wiki
+++ b/wiki/DSPEmulator.wiki
@@ -107,7 +107,7 @@ Also, if inside the ZIP is a .SCR image, it's used as a preview.<br>
 - Virtual Tape: you can load ZIP, CDT, WAV and CSW. Are working the classical loading squemes (bleepload, alkatraz, SpeedLock ...). Use the mouse to move inside the virtual tape and select the starting position.<br>
 - Sound: Polyphonic sound from AY-8912 chip<br>
 - Floppy disk: Emulated the functions of the NEC-765, just missing writing functions. Supports the format 'DSK' and the 'extended' DSK formats.<br>
--To do:<br>
+-To do:
      -Snapshots are not implemented.<br>
      -Some disk protections are not working (a few).<br>
      -Some video effect are missing (M6845 video)<br><br>
@@ -119,10 +119,10 @@ Also, if inside the ZIP is a .SCR image, it's used as a preview.<br>
 -Keys: Use the redefined keys and 'SELECT' uses coin 1 (by default is mapped as key '5' and 'START' uses start player 1 (by default is mapped as the '1' key).<br>
 -Sound: Support sound, only remains DPCM<br>
 -Mappers: Supports 0,1,2,3,4,7,66 y 87<br>
--To Do<br>
-	- Snapshots<br>
-	- Add more mappers<br>
-        - Video Timmings<br><br>
+-To Do
+     - Snapshots<br>
+     - Add more mappers<br>
+     - Video Timmings<br><br>
 <b>GameBoy/Gameboy Color</b><br>
 <hr>
 -ROM: Not required, but if present are loaded and run as the original console.<br>
@@ -132,11 +132,11 @@ The default ROMs names are<br>
 -Keys: Use the redefined keys and 'SELECT' uses coin 1 (by default is mapped as key '5' and 'START' uses start player 1 (by default is mapped as the '1' key).<br>
 -Cartridges: Supports cartridges '.gb' and '.gbc', compressed or not.<br>
 Mappers are supported are MBC0, MBC1 and MBC5.<br>
--To Do<br>
-	- Snapshots<br>
-	- Audio problems, do not work  with high frequencies<br>
-        - Video Timmings<br>
-	- Add more mappers<br><br>
+-To Do
+     - Snapshots<br>
+     - Audio problems, do not work  with high frequencies<br>
+     - Video Timmings<br>
+     - Add more mappers<br><br>
 <b>ColecoVision</b><br>
 <hr>
 -ROM: The ROM is needed for emulation<br>
@@ -148,7 +148,7 @@ ROM file name is<br>
 <b>Chip 8/Super Chip8</b><br>
 <hr>
 -ROM: Does not have. It's a simulation of a pseudo CPU.<br>
--Keyboard: Mapped the system keys<br>
+-Keyboard: Mapped the system keys
     1 2 3 A --> 1 2 3 4<br>
     4 5 6 B --> Q W E R<br>
     7 8 9 C --> A S D F<br>
