Edited wiki page DSPEmulator through web user interface.

--- a/wiki/DSPEmulator.wiki
+++ b/wiki/DSPEmulator.wiki
@@ -331,8 +331,7 @@ If you want the emulator to use the samples, put the files with the same name as
 ||Pirate Ship Higemaru       || HIGEMARU.ZIP ||     100    ||
 ||Bagman                     || BAGMAN.ZIP   ||      95    || Bagman Hardware<br>Missing TSM 5110 sound||
 ||Super Bagman               || SBAGMAN.ZIP  ||      95    || Bagman Hardware<br>Missing TSM 5110 sound||
-||Congo                      || CONGO.ZIP    ||      20    || Zaxxon Hardware<br>Missing controls, audio, background and palette||
-Total: 166||
+||Congo                      || CONGO.ZIP    ||      20    || Zaxxon Hardware<br>Missing controls, audio, background and palette|| Total: 166||
 
 <b>3-. Contribute/Code distribution</b><br>
 <hr>
